add types and units and companies crud

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
-    "recoil": "^0.7.6"
+    "recoil": "^0.7.6",
+    "react-hook-form": "^7.34.2",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
